// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage category migration from v10 to latest ...pull and push should not drift with new amplify version 1`] = `
"Resources
[~] AWS::Lambda::Function UserPoolClientLambda 
 └─ [~] Runtime
     ├─ [-] nodejs14.x
     └─ [+] nodejs16.x

"
`;

exports[`storage category migration from v10 to latest ...pull and push should not drift with new amplify version 2`] = `
"Outputs
[+] Output LambdaExecutionRoleArn: {\\"Value\\":{\\"Fn::GetAtt\\":[\\"LambdaExecutionRole\\",\\"Arn\\"]}}

Resources
[~] AWS::Lambda::Function UserPoolClientLambda 
 └─ [~] Runtime
     ├─ [-] nodejs14.x
     └─ [+] nodejs16.x

"
`;
